adjusted login-ui-container z-index to show above header on squished screens; updated readme with explanation of bug fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -139,6 +139,7 @@ button {
 	border-radius: 20px;
 	background-color: var(--background-1);
 	transform: translateY(-50%);
+	z-index: 2;
 }
 
 .form-container {
